app-all-container/02-mysql-database-service.yaml
apiVersion: v1
kind: Service
metadata:
  name: mysqldb
spec:
  selector:
    app: mysqldb
  ports:
  - port: 3306
    targetPort: 3306
