app-all-container/03-golang-api-service.yaml
apiVersion: v1
kind: Service
metadata:
  name: todoapi
spec:
  selector:
    app: todoapi
  ports:
  - port: 4100
    targetPort: 4100
