app-all-container/04-python-flask-web-app-service.yaml
apiVersion: v1
kind: Service
metadata:
  name: webapp
spec:
  selector:
    app: webapp
  ports:
  - port: 4200
    targetPort: 4200
