app-all-container/07-web-application-route.yaml
kind: Route
apiVersion: route.openshift.io/v1
metadata:
  name: todo-webapp
spec:
  to:
    kind: Service
    name: webapp
  tls:
    termination: edge
    insecureEdgeTerminationPolicy: Redirect
  port:
    targetPort: 4200
